@@ -1,3 +1,4 @@
+* Show inventory as document on lot trace
 
 Version 7.2.0 - 2024-04-29
 --------------------------
